<resources>
    <string name="app_name">Problem2</string>
    <string name="email_tilte">Email : </string>
    <string name="email_hint">Type your email</string>
    <string name="married">Married</string>
    <string name="description_hint">Type your description</string>
    <string name="description_title">Description :</string>
    <string name="publisher_type">Publisher type :</string>
    <string name="its_just_joke">It\'s just Joke</string>
    <string name="publish">Publish</string>
    <string name="somethimg_went_wrong">Something went wrong</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="post_list">Posts list</string>
</resources>