<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_tilte"
            android:textSize="@dimen/large"
            android:gravity="start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email_hint"
            android:textSize="@dimen/large"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_margin="4dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/isJokeOrNot"
            android:text="@string/its_just_joke"
            android:textSize="@dimen/large"
            android:gravity="start|center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publisher_type"
            android:textSize="@dimen/large"
            android:gravity="start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/publisherType"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_title"
            android:textSize="@dimen/large"
            android:gravity="start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:textSize="@dimen/large"
            android:gravity="start|top"
            android:paddingStart="16dp"
            android:layout_marginTop="8dp"
            android:lines="6"
            android:inputType="text|textMultiLine"
            android:autofillHints="@null"
            android:paddingEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:layout_margin="64dp"
            android:text="@string/publish"
            android:textAllCaps="false"
            android:textSize="@dimen/xLarge"
            android:background="#556200EE"/>
    </LinearLayout>

</ScrollView>